tests/snapshots/parser/snapshots/snapshot_0059_perform_missing_dot_contextual.snap
---
source: tests/snapshots/parser/mod.rs
expression: output
---
Parse Errors:
  - Diagnostic { severity: Error, title: "UNEXPECTED TOKEN", display_title: Some("Missing Effect Operation Separator"), category: Some(ParserSeparator), code: Some("E034"), error_type: Some(Compiler), message: Some("This `perform` expression needs `.` between the effect and operation."), file: None, span: Some(Span { start: Position { line: 1, column: 19 }, end: Position { line: 1, column: 24 } }), labels: [], hints: [Hint { kind: Hint, text: "Perform expressions use `perform Effect.op(args...)`.", span: None, label: None, file: None }], suggestions: [], hint_chains: [], related: [], stack_trace: [], phase: None }
