tests/snapshots/parser/snapshots/snapshot_match_expression.snap
---
source: tests/snapshots/parser/mod.rs
expression: output
---
Parse Errors:
  - Diagnostic { severity: Error, title: "UNEXPECTED TOKEN", display_title: Some("Missing Match Arm Arrow"), category: Some(ParserSeparator), code: Some("E034"), error_type: Some(Compiler), message: Some("This match arm needs `->`, not `=>`."), file: None, span: Some(Span { start: Position { line: 3, column: 12 }, end: Position { line: 3, column: 14 } }), labels: [], hints: [Hint { kind: Help, text: "Replace `=>` with `->`.", span: None, label: None, file: None }, Hint { kind: Note, text: "while parsing `match` expression", span: None, label: None, file: None }], suggestions: [], hint_chains: [], related: [], stack_trace: [], phase: None }
  - Diagnostic { severity: Error, title: "UNEXPECTED TOKEN", display_title: Some("Missing Match Arm Arrow"), category: Some(ParserSeparator), code: Some("E034"), error_type: Some(Compiler), message: Some("This match arm needs `->`, not `=>`."), file: None, span: Some(Span { start: Position { line: 4, column: 9 }, end: Position { line: 4, column: 11 } }), labels: [], hints: [Hint { kind: Help, text: "Replace `=>` with `->`.", span: None, label: None, file: None }, Hint { kind: Note, text: "while parsing `match` expression", span: None, label: None, file: None }], suggestions: [], hint_chains: [], related: [], stack_trace: [], phase: None }
