tests/snapshots/parser/snapshots/snapshot_string_interpolation.snap
---
source: tests/snapshots/parser/mod.rs
expression: output
---
Program {
    statements: [
        Let {
            is_public: false,
            name: Symbol(
                0,
            ),
            type_annotation: None,
            value: String {
                value: "Hello ${name}, you have ${count} items",
                span: Span {
                    start: Position {
                        line: 1,
                        column: 10,
                    },
                    end: Position {
                        line: 1,
                        column: 50,
                    },
                },
                id: ExprId(
                    1,
                ),
            },
            span: Span {
                start: Position {
                    line: 1,
                    column: 0,
                },
                end: Position {
                    line: 1,
                    column: 51,
                },
            },
        },
    ],
    span: Span {
        start: Position {
            line: 1,
            column: 0,
        },
        end: Position {
            line: 1,
            column: 51,
        },
    },
}
